--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (names problem_0001 problem_0002 problem_0003)
+ (names problem_0001 problem_0002 problem_0003 problem_0004)
  (libraries core))
