--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (names problem_0001 problem_0002 problem_0003 problem_0004 problem_0005 problem_0006)
+ (names problem_0001 problem_0002 problem_0003 problem_0004 problem_0005 problem_0006 problem_0007)
  (libraries core))
